@@ -3,7 +3,6 @@ depends:
     ir
     res
     cog_utils
-    document
     party
 xml:
     report_engine.xml
